--- a/app/src/main/res/layout/activity_filter_camera.xml
+++ b/app/src/main/res/layout/activity_filter_camera.xml
@@ -25,17 +25,27 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin = "20dp"/>
+        android:layout_margin = "30dp"/>
 
     <ImageButton
         android:id="@+id/btn_swap_camera"
         android:foreground="?android:attr/selectableItemBackground"
-        android:layout_width="wrap_content"
         android:background="@null"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/btn_record"
         android:layout_alignParentEnd="true"
-        android:layout_margin="20dp" />
+        android:layout_margin="30dp" />
+
+    <ImageButton
+        android:id="@+id/btn_choose_filter"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:background="@null"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd ="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin ="30dp" />
 
     <!--<SeekBar-->
         <!--android:id="@+id/seek_bar"-->
