--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -12,6 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <View
+            android:id="@+id/view"
+            android:background="@color/trans_black"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"/>
+
         <ImageButton
             android:id="@+id/player_back_btn"
             android:background="@null"
@@ -19,6 +26,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_margin="30dp" />
+            android:layout_margin="10dp" />
     </RelativeLayout>
 </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
